--- a/thanks.html
+++ b/thanks.html
@@ -335,89 +335,8 @@
 			var blueskyBtns = $('.bluesky-share');
 			for (var i = 0; i < blueskyBtns.length; i++) {
 				var blueskyBtn = blueskyBtns[0];
-				blueskyBtn.href += `&action_id=${actionID}&page=${origPageName}`;
-			}
+				blueskyBtn.href += `&action_id=${actionID}&page=${origPageName}`;			}
 
-			$('.bluesky-share').on('click', function(e) {
-				e.preventDefault();
-				if (typeof gtag !== 'undefined') {
-					// send google analytics event
-					gtag('event', 'scrolling-signup', {'click_id': 'thanksflow_share_bsk'});
-				}
-				if (isPostDonate) {
-					$('#afteraction-flow-share #ak-donate-step-3').prop('checked', true);
-					show_share_tick();
-				}
-				var initialShareURL = e.target.href + '&source=share-ak-thanksflow-bsk';
-				$.ajax({
-					method: 'GET',
-					url: initialShareURL,
-				}).done(function(shareURL) {
-					var blueskyShareURL = `https://bsky.app/intent/compose?text=${shareURL}`;
-					window.open(blueskyShareURL);
-				}).fail(function() {
-					var blueskyShareURL = `https://bsky.app/intent/compose?text=${window.location.href}`;
-					window.open(blueskyShareURL);
-				});
-			});
-
-			$('.copy-link-share').on('click', function (e) {
-				e.preventDefault();
-				if (isPostDonate) {
-					$('#afteraction-flow-share #ak-donate-step-3').prop('checked', true);
-					show_share_tick();
-				}
-				var initialShareURL = e.target.href;
-				var linkButton = e.target;
-				if (!actionID && !origPageName) {
-					return;
-				}
-				initialShareURL += `&action_id=${actionID}&page=${origPageName}&source=share-ak-thanksflow-copylink`;
-				if (typeof gtag !== 'undefined') {
-					gtag('event', 'scrolling-signup', {'click_id': 'thanksflow_share_copylink'});
-				}
-				$.ajax({
-					method: 'GET',
-					url: initialShareURL,
-				}).done(function(shareURL) {
-					navigator.clipboard.writeText(shareURL);
-					linkButton.text = 'Link Copied!';
-				}).fail(function() {
-					navigator.clipboard.writeText(window.location.href);
-				});
-			});
-
-			$('.whatsapp-share').on('click', function(e) {
-				e.preventDefault();
-				if (isPostDonate) {
-					$('#afteraction-flow-share #ak-donate-step-3').prop('checked', true);
-					show_share_tick();
-				}
-				// Set Whatsapp Share URL based on response from API
-				var getShareURL = `/share/link?type=ot&short=1&source=share-ak-thanksflow-wa&action_id=${actionID}&page=${origPageName}`;
-				if (typeof gtag !== 'undefined') {
-					// send google analytics event
-					gtag('event', 'scrolling-signup', {'click_id': 'thanksflow_share_wa'});
-				}
-				var newTab = window.open('', '_blank');
-				$.ajax({
-					method: 'GET',
-					url: getShareURL,
-				}).done(function(shareURL) {
-					var newURL = 'https://api.whatsapp.com/send?text=' + shareURL;
-					$(e.target).attr('href', newURL);
-					newTab.location.href = newURL;
-					if (newTab) {
-						newTab.focus();
-					}
-				}).fail(function () {
-					var whatsappShareURL = 'https://api.whatsapp.com/send?text=' + window.location.href;
-					newTab.location.href = newURL;
-					if (newTab) {
-						newTab.focus();
-					}
-				});
-			});
 		});
 	</script>
 {% endif %}
