--- a/afteraction-flow-share.html
+++ b/afteraction-flow-share.html
@@ -44,10 +44,10 @@
 						<p>{% filter ak_text:"afteraction_share_ask" %}Will you share this to get more people involved?{% endfilter %}</p>
 					{% endif %}
 				</div>
-				<a href='/share/link?type=ot&short=1' class="bg-orange copy-link-share copy-link button button-large">{% filter ak_text:"general_share_link_copy_button" %}Copy Link{% endfilter %}</a>
+				<a data-share-href="/share/link?type=ot&short=1" role="button" tabindex="0" class="bg-orange copy-link-share button button-large">{% filter ak_text:"general_share_link_copy_button" %}Copy Link{% endfilter %}</a>
 				<div class="share-buttons-container margin-top-large">
 					<div class="afteraction-facebook-share-intro afteraction-share-option-intro margin-bottom-medium">
-						<a class="afteraction-share-button fb-share button-icon bg-facebook-color bg-facebook-icon button-share-facebook" data-share-href="/share/link?type=fb&short=1&source=share-ak-thanksflow-fb">
+						<a class="afteraction-share-button afteraction-share-fb button-icon bg-facebook-color bg-facebook-icon button-share-facebook" data-share-href="/share/link?type=fb&short=1&source=share-ak-thanksflow-fb">
 						</a>
 						<span class="text-small">Facebook</span>
 					</div>
@@ -62,7 +62,7 @@
 						<span class="text-small">Whatsapp</span>
 					</div>
 					<div class="afteraction-bluesky-share-intro afteraction-share-option-intro margin-bottom-medium">
-						<a class="afteraction-share-bluesky bluesky-share button-icon bg-bluesky-color bg-bluesky-icon button-share-bluesky" data-share-href="/share/link?type=ot&bluesky=true&short=1" role="button" tabindex="0">
+						<a class="afteraction-share-bluesky button-icon bg-bluesky-color bg-bluesky-icon button-share-bluesky" data-share-href="/share/link?type=ot&bluesky=true&short=1" role="button" tabindex="0">
 						</a>
 						<span class="text-small">Bluesky</span>
 					</div>
@@ -90,6 +90,10 @@
 </div>
 
 <style>
+#afteraction-flow-share a {
+    cursor: pointer;
+}
+
 #afteraction-flow-share .button-icon {
 	border-radius: 2em;
 	width: 3em;
@@ -248,12 +252,12 @@
 		return url.toString();
 	}
 
-	$('.copy-link-share').off('click').on('click', function (e) {
+	$('.copy-link-share').on('click', function (e) {
 		e.preventDefault();
 		var $button = $(this);
 		var originalText = $button.text();
-
-		var baseHref = this.getAttribute('href');
+		var baseHref = $button.attr('data-share-href');
+		console.log('baseHref:', baseHref);
 		var shareURL = buildShareURL(baseHref, {
 			action_id: actionID,
 			page: origPageName,
@@ -302,7 +306,7 @@
 		});
 	});
 
-	$('.bluesky-share').on('click', function(e) {
+	$('.afteraction-share-bluesky').on('click', function(e) {
 		e.preventDefault();
 		if (typeof gtag !== 'undefined') {
 			gtag('event', 'scrolling-signup', {'click_id': 'thanksflow_share_bsk'});
@@ -362,7 +366,7 @@
       window.open('{% filter ak_text:"flow_final_step_link" %}https://350.org/get-involved{% endfilter %}', "_blank");
     });
 
-    $('.fb-share').on('click', function(e) {
+    $('.afteraction-share-fb').on('click', function(e) {
 		e.preventDefault(); 
 		e.stopPropagation();
 		e.stopImmediatePropagation();
