--- a/wrapper.html
+++ b/wrapper.html
@@ -763,7 +763,7 @@ class="ak-pagetype-{{ filename|split:'.'|nth:0 }} {{ page.type }} {{page.lang.is
 		color: white !important;
 	}
 
-	a {
+	button.submit {
 		background-color: black;
     font-family: Klima, sans-serif;
 	}
