--- a/wrapper.html
+++ b/wrapper.html
@@ -759,7 +759,7 @@ class="ak-pagetype-{{ filename|split:'.'|nth:0 }} {{ page.type }} {{page.lang.is
 		color: white !important;
 	}
 
-	p, .section-header, a.lang {
+	.bg-dtl-red p, .section-header, a.lang #footer-links a {
 		color: white !important;
 	}
 
